general-store-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: general-store-loadbalancer
spec:
  selector:
    app: general-store-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
